apps/guestbook/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: nori-butler
  labels:
    app: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.norriswu.me`)
      kind: Rule
      services:
        - name: nginx
          port: 80
